<resources>
    <string name="app_name">La que cambia moneditas</string>
    <string name="ultima_actualizacion">Última actualización</string>
    <string name="moneda_base">MXN: $ 1.00</string>
    <string name="moneda_dolar">USD: $ </string>
    <string name="moneda_euro">EUR: € </string>
    <string name="moneda_libra">GBP: £ </string>
    <string name="moneda_krone">NOK: cor </string>
    <string name="moneda_dinar">RSD: Дин </string>
    <string name="moneda_upeso">UYU: $ </string>
    <string name="moneda_gourde">HTG: G </string>
    <string name="moneda_breal">BRL: R$ </string>
    <string name="moneda_emirates">BIF: FBu </string>
</resources>